Issue #4695: Make pager ellipsis visible in Basis.
By @BWPanda and @indigoxela.

--- a/core/themes/basis/css/skin.css
+++ b/core/themes/basis/css/skin.css
@@ -756,10 +756,6 @@ ul.action-links a {
   color: #ffffff;
 }
 
-.pager-ellipsis {
-  color: #586172;
-}
-
 .pager-first a,
 .pager-previous a,
 .pager-next a,
